--- a/title.tex
+++ b/title.tex
@@ -12,7 +12,7 @@
     { \huge \bfseries
 
       % FIXME: The project name
-      Protocolname Security Review
+      Unstoppable Security Review
     }\\[0.25cm]
     
     \noindent\makebox[\linewidth]{\rule{.7\paperwidth}{.6pt}}\\[0.7cm]
@@ -30,9 +30,7 @@
     {\bfseries Reviewers}\\
     
     % FIXME 
-    Reviewer 1, Lead \\
-    Reviewer 2, Lead \\
-    Reviewer 3, Researcher
+    Américo Júnior, Security Auditor \\
 
     {\large \today}
 
