--- a/title.tex
+++ b/title.tex
@@ -23,7 +23,7 @@
     
     \vfill
 
-    \includegraphics[width=0.40\textwidth]{img/spearbit_wordmark_black.png}
+    % \includegraphics[width=0.40\textwidth]{img/spearbit_wordmark_black.png}
 
     
     \large
