Naive Receiver Challenge Report

--- a/title.tex
+++ b/title.tex
@@ -12,7 +12,7 @@
     { \huge \bfseries
 
       % FIXME: The project name
-      Unstoppable Security Review
+      Naive Receiver Security Review
     }\\[0.25cm]
     
     \noindent\makebox[\linewidth]{\rule{.7\paperwidth}{.6pt}}\\[0.7cm]
