--- a/summary.tex
+++ b/summary.tex
@@ -2,19 +2,19 @@
 \section{Executive Summary}\label{executive-summary}}
 
 % FIXME
-Over the course of 5 days in total, \href{https://www.damnvulnerabledefi.xyz/challenges/1.html}{Unstoppable} engaged with
+Over the course of 5 days in total, \href{https://www.damnvulnerabledefi.xyz/challenges/2.html}{Naive Receiver} engaged with
 \href{https://americojunior.com}{Américo Júnior} to review
 % FIXME
-\href{https://www.damnvulnerabledefi.xyz/challenges/1.html}{Unstoppable}. 
+\href{https://www.damnvulnerabledefi.xyz/challenges/2.html}{Unstoppable}. 
 
-We found a total of 4 issues with Unstoppable. 
+I found a total of 1 issue with Naive Receiver. 
 
 \begin{longtable}[c]{|l|l|}
 \hline \textbf{Repository} & \textbf{Commit} \\
 
 \hline
 % FIXME
-\href{https://www.damnvulnerabledefi.xyz/challenges/1.html}{Unstoppable} &
+\href{https://www.damnvulnerabledefi.xyz/challenges/2.html}{Unstoppable} &
 % FIXME The commit hash
 \href{https://github.com/permalink/commit/commithash}{commithash} \\
 \hline
@@ -42,11 +42,11 @@ We found a total of 4 issues with Unstoppable.
 % FIXME
 \hline Critical Risk & 0 \\
 % FIXME
-\hline High Risk & 2 \\
+\hline High Risk & 1 \\
 % FIXME
-\hline Medium Risk & 1 \\ 
+\hline Medium Risk & 0 \\ 
 % FIXME
-\hline Low Risk & 1 \\
+\hline Low Risk & 0 \\
 \hline Gas Optimizations and Informational & 0 \\
 \hline
 \end{longtable}
