Truster Challenge Report

--- a/summary.tex
+++ b/summary.tex
@@ -2,19 +2,19 @@
 \section{Executive Summary}\label{executive-summary}}
 
 % FIXME
-Over the course of 5 days in total, \href{https://www.damnvulnerabledefi.xyz/challenges/2.html}{Naive Receiver} engaged with
+Over the course of 2 days in total, \href{https://www.damnvulnerabledefi.xyz}{Damn Vulnerable DeFi} engaged with
 \href{https://americojunior.com}{Américo Júnior} to review
 % FIXME
-\href{https://www.damnvulnerabledefi.xyz/challenges/2.html}{Unstoppable}. 
+\href{https://www.damnvulnerabledefi.xyz/challenges/3.html}{Truster}. 
 
-I found a total of 1 issue with Naive Receiver. 
+I found a total of 1 issue with Truster. 
 
 \begin{longtable}[c]{|l|l|}
 \hline \textbf{Repository} & \textbf{Commit} \\
 
 \hline
 % FIXME
-\href{https://www.damnvulnerabledefi.xyz/challenges/2.html}{Unstoppable} &
+\href{https://www.damnvulnerabledefi.xyz/challenges/3.html}{Truster} &
 % FIXME The commit hash
 \href{https://github.com/permalink/commit/commithash}{commithash} \\
 \hline
@@ -40,9 +40,9 @@ I found a total of 1 issue with Naive Receiver.
 \begin{longtable}[]{|l|l|}
 \caption*{\textbf{Total Issues}}
 % FIXME
-\hline Critical Risk & 0 \\
+\hline Critical Risk & 1 \\
 % FIXME
-\hline High Risk & 1 \\
+\hline High Risk & 0 \\
 % FIXME
 \hline Medium Risk & 0 \\ 
 % FIXME
