Truster Challenge Report Fixes

--- a/title.tex
+++ b/title.tex
@@ -27,7 +27,7 @@
 
     
     \large
-    {\bfseries Reviewers}\\
+    {\bfseries Reviewer}\\
     
     % FIXME 
     Américo Júnior, Security Auditor \\
